# sabetudo-cli

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
src/services/: client.py
