[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sabetudo"
version = "0.1.0"
authors = [
  {name = "Gabriel Alves"}
]
description = "CLI assistente usando a API da Groq"
requires-python = ">=3.8"

dependencies = [
  "typer>=0.4",
  "requests>=2.28",
  "python-dotenv>=1.0"
]

[project.scripts]
sabetudo = "app:app"
